fix: 🐛 3:1 color contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,12 +6,12 @@
   --line: hsl(215, 32%, 27%);
   --white: hsl(0, 0%, 100%); */
 
-  --soft-yellow: #e8debe;
+  --soft-yellow: #a0a0a0;
   --primary: hsl(44.52deg 83.73% 65.22%);
   --card-bg: #0f0f0f;
   --main-bg: hsl(74.66deg 90.79% 79.52%);
   --line: hsl(0deg 61.31% 67.28%);
-  --white: hsl(0, 0%, 100%);
+  --white: hsl(55, 100%, 83%);
 }
 
 body {
